# cpplm

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists_Thirdparty.txt.in  LICENSE  README.md  _handytools.xml  main.cpp
include/: cppgpt.h  gguf.h
src/: cppgpt.cpp  gguf.cpp  main.cpp
test/: CMakeLists.txt  main.cpp  test_cnn.cpp  test_container.cpp  test_gguf.cpp  test_graph.cpp  test_hash.cpp
